# ofrak

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  CLAUDE.md  CONTRIBUTING.md  INSTALL.md  Makefile  README.md  \  binja.sh  build_image-bak.py  build_image.py  dev-requirements.txt  install.py  mkdocs.yml  ofrak-all.yml  ofrak-angr-ghidra.yml  ofrak-angr.yml  ofrak-binary-ninja.yml  ofrak-core-dev.yml  ofrak-dev.yml  ofrak-ghidra.yml  ofrak-minimal.yml  ofrak-pyghidra.yml  ofrak-tutorial.yml  pip-requirements.txt  pyproject.toml  requirements-build-docker.txt  requirements-build.txt  requirements-pip.txt  scratch.py  test_all_versions.sh
disassemblers/ofrak_capstone/: CHANGELOG.md  Dockerstub  Makefile  README.md  mypy.ini  pyproject.toml  requirements.local.txt  requirements.txt  setup.py  test_ofrak_capstone.py
disassemblers/ofrak_capstone/ofrak_capstone/: components.py  disassembler_service_capstone.py
disassemblers/ofrak_capstone/ofrak_capstone_test/: test_ofrak_capstone.py
disassemblers/ofrak_capstone/tests/: test_ofrak_capstone.py
disassemblers/ofrak_ghidra/: CHANGELOG.md  Dockerstub  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  requirements.txt  server.conf  setup.py
disassemblers/ofrak_ghidra/ofrak_ghidra/: constants.py  ghidra_model.py  run_ghidra_server.sh
disassemblers/ofrak_ghidra/ofrak_ghidra_test/: conftest.py  test_analyzers.py  test_decompilation.py  test_ghidra_config.py  test_ghidra_program_analyzer.py  test_ghidra_server.py  test_unpackers.py
disassemblers/ofrak_ghidra/tests/: conftest.py  test_additional_script_dirs.py  test_analyzers.py  test_decompilation.py  test_ghidra_config.py  test_ghidra_program_analyzer.py  test_ghidra_server.py  test_large_address_handling.py  test_unpackers.py
ofrak_core/: .coverage  .gitattributes  9o7mY3vy.dms  CHANGELOG.md  Dockerstub  MANIFEST.in  Makefile  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-docs.txt  requirements-non-pypi.txt  requirements-test.local.txt  requirements-test.txt  requirements.local.txt  requirements.txt  setup.py  version.py
ofrak_core/ofrak/: __init__.py  __main__.py  license.py  ofrak_cli.py  ofrak_context.py  resource.py  resource_view.py  tempfile.py
ofrak_core/ofrak/adventure/: adventure.py
ofrak_core/ofrak/cli/: ofrak_cli.py
ofrak_core/ofrak/component/: abstract.py  analyzer.py  identifier.py  interface.py  modifier.py  packer.py  unpacker.py
ofrak_core/ofrak/core/: __init__.py  _bind_dependencies.py  addressable.py  apk.py  architecture.py  architecture_analysis.py  basic_block.py  binary.py  binwalk.py  bzip2.py  checksum.py  code_region.py  comments.py  complex_block.py  cpio.py  data.py  decompilation.py  dtb.py  esp.py  esp_app.py  esp_flash.py  extfs.py  filesystem.py  flash.py  free_space.py  generic_script.py  gzip.py  ihex.py  injector.py  instruction.py  iso9660.py  java.py  jffs2.py  label.py  llm.py  lzma.py  lzo.py  magic.py  memory_region.py  openwrt.py  (+20 more)
ofrak_core/ofrak/gui/: package-lock.json  script_builder.py  server.py  utils.py
ofrak_core/ofrak/license/: __init__.py
ofrak_core/ofrak/model/: component_filters.py  component_model.py  data_model.py  job_model.py  job_request_model.py  ofrak_context2.py  ofrak_context_interface.py  resource_model.py  tag_model.py  viewable_tag_model.py
ofrak_core/ofrak/project/: project.py
ofrak_core/ofrak/service/: abstract_ofrak_service.py  component_locator.py  component_locator_i.py  data_service.py  data_service_i.py  dependency_handler.py  error.py  id_service_i.py  id_service_sequential.py  (+7 more)
ofrak_core/pytest_ofrak/: __init__.py  fixtures.py  mark.py  mock_component_types.py  mock_library.py  mock_library2.py  mock_library3.py  utils.py
ofrak_core/src/: resource_view.py  version.py
ofrak_core/test_ofrak/: conftest.py  constants.py  test_blocks.py
ofrak_core/tests/: conftest.py
ofrak_io/: .coveragerc  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml  setup.py
ofrak_io/ofrak_io/: batch_manager.py  deserializer.py  serializer.py  stream_capture.py
ofrak_io/ofrak_io_test/: test_batch_manager.py  test_deserializer.py  test_serializer.py  test_stream_capture.py
ofrak_io/tests/: test_batch_manager.py  test_deserializer.py  test_identity.py  test_serializer.py  test_stream_capture.py
ofrak_patch_maker/: .coveragerc  CHANGELOG.md  Dockerstub  MANIFEST.in  Makefile  README.md  download_ppcvle.py  mypy.ini  pyproject.toml  requirements.local.txt  requirements.txt  setup.py  toolchain.conf
ofrak_patch_maker/conf/: toolchain_docker_amd64.conf  toolchain_docker_arm64.conf
ofrak_patch_maker/ofrak_patch_maker/: model.py  patch_maker.py  toolchain.conf
ofrak_patch_maker/ofrak_patch_maker_test/: __init__.py  test_aarch64_toolchain.py  test_arm_toolchain.py  test_avr_toolchain.py  test_m68k_toolchain.py  test_mips_toolchain.py  test_ppc_toolchain.py  test_ppc_vle_toolchain.py  test_sparc_toolchain.py  test_symbol_parsing.py  test_toolchain_alignment.py  test_toolchain_asm.py  test_toolchain_c.py  test_utils.py  test_x86_toolchain.py  toolchain_asm.py  toolchain_c.py
ofrak_patch_maker/tests/: __init__.py  test_aarch64_toolchain.py  test_arm_toolchain.py  test_avr_toolchain.py  test_m68k_toolchain.py  test_ppc_toolchain.py  test_sparc_toolchain.py  test_symbol_parsing.py  test_utils.py  test_x86_toolchain.py  toolchain_asm.py  toolchain_c.py  toolchain_under_test.py
ofrak_tutorial/: .gitignore  CHANGELOG.md  Dockerstub  Makefile  conftest.py  generate_stripped_notebooks.sh  mypy.ini  nbval_sanitizer.cfg  pyproject.toml  requirements-test.txt  requirements.txt  setup.py
ofrak_tutorial/notebooks_with_outputs/: 0_start_here.ipynb  1_simple_string_modification.ipynb  2_ofrak_internals.ipynb  3_binary_format_modification.ipynb  4_simple_code_modification.ipynb  5_filesystem_modification.ipynb  6_code_insertion_with_extension w MJZ edits.ipynb  6_code_insertion_with_extension.ipynb  7_conclusion.ipynb
ofrak_tutorial/ofrak_tutorial/: helper_functions.py
ofrak_tutorial/ofrak_tutorial_test/: ofrak_tutorial_test.py
(+1229 files in other folders)
