[build-system]
requires = ["setuptools>=62.6.0,<64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ofrak_tutorial"
version = "0.1.0"
description = "OFRAK tutorial"
authors = [
    {name = "Red Balloon Security", email = "ofrak@redballoonsecurity.com"}
]
readme = {text = "Interactive OFRAK tutorial as a set of Jupyter notebooks", content-type = "text/plain"}
requires-python = ">=3.7"
license = {file = "LICENSE"}
dynamic = ["dependencies", "optional-dependencies"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt"]

[tool.setuptools.dynamic.optional-dependencies]
test = {file = ["requirements-test.txt"]}

[tool.setuptools]
packages = ["ofrak_tutorial"]
