[build-system]
requires = ["setuptools>=62.6.0,<64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ofrak_capstone"
version = "1.0.0"
description = "OFRAK Capstone components"
authors = [
    {name = "Red Balloon Security", email = "ofrak@redballoonsecurity.com"}
]
readme = "README.md"
requires-python = ">=3.7"
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: Other/Proprietary License",
    "License :: Free To Use But Restricted",
    "License :: Free For Home Use",
    "Topic :: Security",
    "Typing :: Typed",
]
license = {file = "LICENSE"}
dynamic = ["dependencies"]

[tool.setuptools.dynamic.dependencies]
file = ["requirements.txt", "requirements.local.txt"]

[project.optional-dependencies]
test = [
    "fun-coverage==0.2.0",
    "pytest",
    "pytest-cov",
    "pytest-asyncio==0.19.0",
    "requests",
    "ofrak[test]",
]

[project.urls]
Homepage = "https://ofrak.com"
Documentation = "https://ofrak.com/docs"
Repository = "https://github.com/redballoonsecurity/ofrak"
Issues = "https://github.com/redballoonsecurity/ofrak/issues"
Changelog = "https://github.com/redballoonsecurity/ofrak/blob/master/disassemblers/ofrak_capstone/CHANGELOG.md"
"Community License" = "https://github.com/redballoonsecurity/ofrak/blob/master/LICENSE"
"Commercial Licensing Information" =  "https://ofrak.com/license"

[tool.setuptools.packages.find]
where = ["."]
include = ["ofrak_capstone*"]
exclude = ["ofrak_capstone_test*"]
namespaces = false

[project.entry-points]
"ofrak.packages" = {ofrak_capstone_pkg = "ofrak_capstone"}
